feat: 添加vitest 单元测试

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint:style": "stylelint src/**/*.vue",
         "prepare": "husky",
         "spellcheck": "cspell lint --dot --gitignore --color --no-cache src/**/*.{ts,js,vue,json}",
-        "commit": "git-cz"
+        "commit": "git-cz",
+        "test": "vitest"
     },
     "config": {
         "commitizen": {
@@ -43,6 +44,7 @@
         "commitlint": "19.3.0",
         "commitizen": "4.2.4",
         "cz-git": "1.9.3",
-        "@commitlint/config-conventional": "19.2.2"
+        "@commitlint/config-conventional": "19.2.2",
+        "vitest": "2.0.2"
     }
 }
