--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "smooth-dnd": "0.12.1",
         "vee-validate": "4.13.2",
         "echarts": "5.5.1",
-        "vue-echarts": "6.7.3"
+        "vue-echarts": "6.7.3",
+        "zrender": "5.6.0",
+        "d3": "7.9.0"
     },
     "devDependencies": {
         "@eslint/js": "9.7.0",
@@ -49,6 +51,7 @@
         "commitizen": "4.2.4",
         "cz-git": "1.9.3",
         "@commitlint/config-conventional": "19.2.2",
-        "vitest": "2.0.2"
+        "vitest": "2.0.2",
+        "@types/d3": "7.4.3"
     }
 }
